--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 $(document).ready(function() {
   
   		// Define spreadsheet URL.
-var mySpreadsheet = 'https://docs.google.com/spreadsheets/d/1b_lsPNlgxPouJqpCfM-qIEZ3jX-5j_yEHwvRIYSau00/edit#gid=1354947515';
+var mySpreadsheet = 'https://docs.google.com/spreadsheets/d/1DrqBR528IhCltGXxA2xYsbYnpbN29QUcCokh5M_g3gk/';
 
 var HRTemplate = Handlebars.compile($('#hr-template').html());
 
