--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ $('#hr').sheetrock({
 	  <script id="hr-template" type="text/x-handlebars-template">
 	    <li style="display: block;">
 	    	<div class="content">
-	    	
+	    		<p class="number">{{cells.Title}}</p>
 		    </div>   
 	    </li>
 	  </script>
