--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 $(document).ready(function() {
   
   		// Define spreadsheet URL.
-var mySpreadsheet = 'https://docs.google.com/spreadsheets/d/1DrqBR528IhCltGXxA2xYsbYnpbN29QUcCokh5M_g3gk/';
+var mySpreadsheet = 'https://docs.google.com/spreadsheets/d/1DrqBR528IhCltGXxA2xYsbYnpbN29QUcCokh5M_g3gk/edit#gid=0';
 
 var HRTemplate = Handlebars.compile($('#hr-template').html());
 
