--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ $('#hr').sheetrock({
 	    <li style="display: block;">
 	    	<div class="content">
 	    		<p class="number">{{cells.Title}}</p>
+	    		<img src="{{cells.Image}}"/>
 		    </div>   
 	    </li>
 	  </script>
