--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ $('#hr').sheetrock({
 	<ul id="hr">
 	  <script id="hr-template" type="text/x-handlebars-template">
 	    <li style="display: block;">
-	    	<div class="content">
+	    	<div class="comic">
 	    		<p class="number">{{cells.Title}}</p>
 	    		<img src="{{cells.Image}}"/>
 	    		<p class="number">#{{cells.Issue}}</p>
