--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@ $('#hr').sheetrock({
     		<p class="number">#{{cells.Issue}}</p>
     		<p class="number">${{cells.Price}}</p>
     		<p class="number">{{cells.Username}}</p>
+    		<div class="comic-content">
+    			<p class="number">{{cells.Title}}</p>
+    			<p class="number">{{cells.Publisher}}</p>
+    			<p class="number">{{cells.Store}}</p>
+    			<p class="number">{{cells.User Submitted}}</p>
+    			<p class="number">{{cells.Timestamp}}</p>
+    		</div>
 	    </li>
 	  </script>
 	</ul>
