--- a/index.html
+++ b/index.html
@@ -38,113 +38,14 @@
 			</symbol>
 		<main>
 			<div class="content">
-				<header class="codrops-header">
-					<div class="codrops-links">
-						<a class="codrops-icon codrops-icon--prev" href="https://tympanus.net/Development/KyloRenPreloader/" title="Previous Demo"><svg class="icon icon--arrow"><use xlink:href="#icon-arrow"></use></svg></a>
-						<a class="codrops-icon codrops-icon--drop" href="https://tympanus.net/codrops/?p=32944" title="Back to the article"><svg class="icon icon--drop"><use xlink:href="#icon-drop"></use></svg></a>
-					</div>
-					<h1 class="codrops-header__title">Expanding Grid Item Animation</h1>
-					<span class="info">Based on the Dribbble shot <a href="https://dribbble.com/shots/3879463-Surf-Project">Surf Project</a> by <a href="https://dribbble.com/filipslovacek">Filip Slov&#225;&#269;ek</a></span>
+				<header>
+
 				</header>
-				<a class="pater" href="http://synd.co/2yatEfN" rel="nofollow" onClick="recordOutboundLink(this, 'Outbound Links', 'Storyblocks08112017');return false;">
-					<img src="pater/storyblocks.jpg" class="pater__img" alt="Storyblocks"/>
-					<h3 class="pater__title">​7 Days of Free Images with Storyblocks</h3>
-					<p class="pater__desc">Download anything you want from over 400,000 photos, vectors, and backgrounds! <strong>Start downloading now &rarr;</strong></p>
-				</a>
 			</div>
-			<button class="dummy-menu"><svg class="icon icon--menu"><use xlink:href="#icon-menu"></use></svg></button>
+
 			<div class="content">
 				<div class="grid">
-					<div class="grid__item">
-						<div class="product">
-							<div class="product__bg"></div>
-							<img class="product__img" src="img/1.png" alt="img 01"/>
-							<h2 class="product__title">Marble Dream</h2>
-							<h3 class="product__subtitle">Constantin Frecker</h3>
-							<p class="product__description">Hashtag cred air plant drinking vinegar. Leggings yuccie chambray pop-up tousled hell of. Portland wolf mumblecore, synth cold-pressed polaroid poke cardigan gochujang farm-to-table photo booth.</p>
-							<div class="product__price">$129</div>
-						</div>
-					</div>
-					<div class="grid__item">
-						<div class="product">
-							<div class="product__bg"></div>
-							<img class="product__img" src="img/2.png" alt="img 02"/>
-							<h2 class="product__title">Space Fantasy</h2>
-							<h3 class="product__subtitle">Danica Green</h3>
-							<p class="product__description">Man bun banjo pop-up meh hammock. Skateboard hammock tousled retro, etsy taiyaki narwhal gentrify fixie food truck microdosing sustainable dreamcatcher.</p>
-							<div class="product__price">$199</div>
-						</div>
-					</div>
-					<div class="grid__item">
-						<div class="product">
-							<div class="product__bg"></div>
-							<img class="product__img" src="img/3.png" alt="img 03"/>
-							<h2 class="product__title">Mighty Eighties</h2>
-							<h3 class="product__subtitle">Elizabeth Smith</h3>
-							<p class="product__description">Air plant affogato microdosing banjo, palo santo squid craft beer vexillologist chambray everyday carry cronut aesthetic intelligentsia. </p>
-							<div class="product__price">$159</div>
-						</div>
-					</div>
-					<div class="grid__item">
-						<div class="product">
-							<div class="product__bg"></div>
-							<img class="product__img" src="img/4.png" alt="img 04"/>
-							<h2 class="product__title">Diamond Crafter</h2>
-							<h3 class="product__subtitle">Fred House</h3>
-							<p class="product__description">Crucifix shoreditch tumblr heirloom irony tbh gastropub migas sartorial mustache direct trade plaid readymade ramps hammock.</p>
-							<div class="product__price">$199</div>
-						</div>
-					</div>
-					<div class="grid__item">
-						<div class="product">
-							<div class="product__bg"></div>
-							<img class="product__img" src="img/5.png" alt="img 05"/>
-							<h2 class="product__title">Disco Fever</h2>
-							<h3 class="product__subtitle">Alice Muller</h3>
-							<p class="product__description">Single-origin coffee air plant kitsch paleo iPhone vegan cold-pressed slow-carb cornhole dreamcatcher palo santo salvia lo-fi. </p>
-							<div class="product__price">$99</div>
-						</div>
-					</div>
-					<div class="grid__item">
-						<div class="product">
-							<div class="product__bg"></div>
-							<img class="product__img" src="img/6.png" alt="img 06"/>
-							<h2 class="product__title">Little Boxes</h2>
-							<h3 class="product__subtitle">Xavier Brighton</h3>
-							<p class="product__description">Drinking vinegar lumbersexual 90's flexitarian. Live-edge man bun air plant XOXO. Master cleanse vaporware keffiyeh.</p>
-							<div class="product__price">$299</div>
-						</div>
-					</div>
-					<div class="grid__item">
-						<div class="product">
-							<div class="product__bg"></div>
-							<img class="product__img" src="img/7.png" alt="img 07"/>
-							<h2 class="product__title">Fractal Love</h2>
-							<h3 class="product__subtitle">Walter Perry</h3>
-							<p class="product__description">Leggings green juice DIY, flannel tattooed selvage plaid yr sartorial chia. Scenester you probably haven't heard of them locavore.</p>
-							<div class="product__price">$129</div>
-						</div>
-					</div>
-					<div class="grid__item">
-						<div class="product">
-							<div class="product__bg"></div>
-							<img class="product__img" src="img/8.png" alt="img 08"/>
-							<h2 class="product__title">Liquidia</h2>
-							<h3 class="product__subtitle">Lidia Greenwood</h3>
-							<p class="product__description">Helvetica la croix readymade, butcher viral pitchfork chillwave pork belly vaporware blue bottle iceland semiotics subway tile irony.</p>
-							<div class="product__price">$249</div>
-						</div>
-					</div>
-					<div class="grid__item">
-						<div class="product">
-							<div class="product__bg"></div>
-							<img class="product__img" src="img/9.png" alt="img 09"/>
-							<h2 class="product__title">The Buzz</h2>
-							<h3 class="product__subtitle">Sarah Grand</h3>
-							<p class="product__description">Celiac distillery man braid venmo, selfies you probably haven't heard of them tote bag forage fanny pack activated charcoal kale chips lo-fi before they sold out.</p>
-							<div class="product__price">$399</div>
-						</div>
-					</div>
+				
 					<div class="grid__item">
 						<div class="product">
 							<div class="product__bg"></div>
@@ -155,23 +56,11 @@
 							<div class="product__price">$199</div>
 						</div>
 					</div>
+						
 				</div>
 			</div>
-			<section class="content content--related">
-				<p>Find this project on <a href="https://github.com/codrops/ExpandingGridItemAnimation/">GitHub</a>.</p>
-				<p>If you enjoyed this demo you might also like:</p>
-				<a class="media-item" href="https://tympanus.net/Development/AnimatedGridLayout/">
-					<img class="media-item__img" src="img/related/GridItemAnimation.jpg">
-					<h3 class="media-item__title">Grid Item Animation Layout</h3>
-				</a>
-				<a class="media-item" href="https://tympanus.net/Development/ImageGridEffects/">
-					<img class="media-item__img" src="img/related/ImageGridEffects.png">
-					<h3 class="media-item__title">Effect Ideas for Image Grids</h3>
-				</a>
-				<p>Guitar vector <a href="http://www.freepik.com">designed by Freepik</a>.</p>
-				<p>Patterns by <a href="https://pixelbuddha.net/">Pixel Buddha</a>.</p>
-			</section>
 		</main>
+		
 		<script src="js/imagesloaded.pkgd.min.js"></script>
 		<script src="js/anime.min.js"></script>
 		<script src="js/main.js"></script>
