--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 				    
 				    <div class="grid__item">
 						<div class="product">
+						<div class="product__bg"></div>
 							<img class="product__img" src="{{cells.Image}}" alt="img 10"/>
 							<h2 class="product__title">{{cells.Title}}</h2>
 							<h3 class="product__subtitle">#{{cells.Issue}}</h3>
