--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="shortcut icon" href="favicon.ico">
 		<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
-		<link rel="stylesheet" type="text/css" href="pater/pater.css" />
+
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 		
 		<script src="js/modernizr.js"></script> <!-- Modernizr -->
@@ -68,7 +68,7 @@
 							<img class="product__img" src="{{cells.Image}}" alt="img 10"/>
 							<h2 class="product__title">{{cells.Title}}</h2>
 							<h3 class="product__subtitle">#{{cells.Issue}}</h3>
-							<h4 class="product__subtitle">${{cells.Price}}</h3>
+							<h4 class="product__subtitle">{{cells.Price}}</h3>
 							<p class="product__description">{{cells.Username}} | {cells.Publisher}} | {{cells.UserSubmitted}} | {{cells.Timestamp}}</p>
 							<div class="product__price">{{cells.Store}}</div>
 						</div>
@@ -83,6 +83,12 @@
 				
 			</div>
 		</main>
+		
+		<footer>
+			<div class="content">
+				<p>Copyright &copy; 2019 Comic Scouts. All Rights Reserved.</p>
+			</div>
+		</footer>
 		
 		<script src="js/imagesloaded.pkgd.min.js"></script>
 		<script src="js/anime.min.js"></script>
