--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 				<div id="hr">
 				  <script id="hr-template" type="text/x-handlebars-template">
 				    
-				    <div class="grid__item">
+				   <div class="grid__item">
 						<div class="product">
-						<div class="product__bg"></div>
-							<img class="product__img" src="{{cells.Image}}" alt="img 10"/>
+							<div class="product__bg"></div>
+							<img class="product__img" src="{{cells.Image}}" alt="{{cells.Title}}"/>
 							<h2 class="product__title">{{cells.Title}}</h2>
 							<h3 class="product__subtitle">#{{cells.Issue}}</h3>
 							<h4 class="product__subtitle">{{cells.Price}}</h3>
