--- a/_dev/index.html
+++ b/_dev/index.html
@@ -11,15 +11,6 @@
 		<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
 		
-				<script src="js/modernizr.js"></script> <!-- Modernizr -->
-
-  <!-- Load jQuery and Sheetrock from CDNJS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-sheetrock/1.1.4/dist/sheetrock.min.js"></script>
-	
-	<!-- Load Handlebars.js from CloudFlare’s CDN. -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
-
 
 		
 	</head>
@@ -210,6 +201,30 @@
 		</main>
 		<script src="js/imagesloaded.pkgd.min.js"></script>
 		<script src="js/anime.min.js"></script>
+						<script src="js/modernizr.js"></script> <!-- Modernizr -->
+
+  <!-- Load jQuery and Sheetrock from CDNJS -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-sheetrock/1.1.4/dist/sheetrock.min.js"></script>
+	
+	<!-- Load Handlebars.js from CloudFlare’s CDN. -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
+
+	<script type="text/javascript">
+	$(document).ready(function() {
+	  
+	  		// Define spreadsheet URL.
+	var mySpreadsheet = 'https://docs.google.com/spreadsheets/d/1DrqBR528IhCltGXxA2xYsbYnpbN29QUcCokh5M_g3gk/edit#gid=0';
+	
+	var HRTemplate = Handlebars.compile($('#hr-template').html());
+	
+	$('#hr').sheetrock({
+	  url: mySpreadsheet,
+	  rowTemplate: HRTemplate
+	}); 
+	  
+	});
+	</script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
