--- a/index.html
+++ b/index.html
@@ -42,13 +42,12 @@ $('#hr').sheetrock({
 
 <header>
 <div class="topnav" id="myTopnav">
-	<div class="logo">
-		<a href="/"><img src="home-logo.png"></a>
+	<div class="logo-container">
+		<a class="logo" href="/"><img src="home-logo.png"></a>
 	</div>
-  <a href="/" class="active">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <a href="all.html">All Comics</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
@@ -58,6 +57,7 @@ $('#hr').sheetrock({
 	<section class="content">
 		<h1>Welcome to Comic Scouts.</h1>
 		<p>Your top destination to find comics from your local comic shops. Comics are crowdsourced through our web app, you can manage and find more comics by downloading the app on your phone.</p>
+		<a class="button" href="#">Download the Web App</a>
 	</section>
 	
 	<h2>Recently Scouted</h2>
@@ -95,17 +95,9 @@ $('#hr').sheetrock({
 	
 	<p><a href="all.html">View All Comics ></a></p>
 
-<nav>
-	<ul>
-		<li><a href="index.html">Dashboard</a></li>
-		<li><a href="stocks.html">Stocks</a></li>
-		<li><a href="dividend.html">Dividends</a></li>
-	</ul>
-</nav>
-
 <footer>
 	<div class="content">
-		<p>Copyright &copy; 2019 Comic Scouts. All Rights Reserved.</p>
+		<p>Copyright &copy; 2019 Comic Scouts. All Rights Reserved. <a href="terms.html">Terms</a> | <a href="privacy-policy.html">Privacy Policy</a></p>
 	</div>
 </footer>
 	
