Mobile overlay styles

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ $('#hr').sheetrock({
     		
     		<div id="comic-display-{{cells.NID}}" class="overlay">
 					<div class="popup">
-						<a class="close" href="#">&times;</a>
+						<a class="close" href="#"><p>Close <span>&times;</span></a>
 						<img src="{{cells.Image}}"/>
 						<h2 class="title">{{cells.Title}}</h2>
 	    			<p class="publisher">{{cells.Publisher}}</p>
