--- a/social.html
+++ b/social.html
@@ -55,10 +55,8 @@ $('#hr').sheetrock({
 
 <div id="myBtnContainer">
   <button class="btn active" onclick="filterSelection('all')"> Show all</button>
-  <button class="btn" onclick="filterSelection('cars')"> Cars</button>
-  <button class="btn" onclick="filterSelection('animals')"> Animals</button>
-  <button class="btn" onclick="filterSelection('fruits')"> Fruits</button>
-  <button class="btn" onclick="filterSelection('colors')"> Colors</button>
+  <button class="btn" onclick="filterSelection('1')"> Posted</button>
+  <button class="btn" onclick="filterSelection('0')"> No Post</button>
 </div>
 	
 	<section class="social-post">
