--- a/social.html
+++ b/social.html
@@ -54,8 +54,8 @@ $('#hr').sheetrock({
 </header>
 
 <div id="myBtnContainer">
+	<button class="btn active" onclick="filterSelection('0')"> No Post</button>
   <button class="btn" onclick="filterSelection('1')"> Posted</button>
-  <button class="btn active" onclick="filterSelection('0')"> No Post</button>
 </div>
 	
 	<section class="social-post">
@@ -65,7 +65,7 @@ $('#hr').sheetrock({
 		</div>
 	
 
-	<ul id="hr"></ul>
+	<ul id="hr listing"></ul>
 	
 	<ul id="hr">
 	  <script id="hr-template" type="text/x-handlebars-template">
