--- a/social.html
+++ b/social.html
@@ -65,7 +65,7 @@ $('#hr').sheetrock({
 		</div>
 	
 
-	<ul id="hr listing"></ul>
+	<ul id="hr" class="listing"></ul>
 	
 	<ul id="hr">
 	  <script id="hr-template" type="text/x-handlebars-template">
