--- a/social.html
+++ b/social.html
@@ -37,7 +37,7 @@ $('#hr').sheetrock({
 </script>
 
 </head>
-<body class="home">
+<body class="social-post-page">
 
 <header>
 <div class="topnav" id="myTopnav">
