--- a/social.html
+++ b/social.html
@@ -55,7 +55,7 @@ $('#hr').sheetrock({
 
 <div id="myBtnContainer">
 	<button class="btn active" onclick="filterSelection('0')"> No Post</button>
-  <button class="btn" onclick="filterSelection('1')"> Posted</button>
+  <button class="btn" onclick="filterSelection('posted')"> Posted</button>
 </div>
 	
 	<section class="social-post">
