--- a/social.html
+++ b/social.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 
-	<title>Comic Scouts</title>
+	<title>Comic Scouts | Social Post</title>
 
 	<link rel="stylesheet" href="css/reset.min.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
