--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ $('#hr').sheetrock({
 	<section class="content">
 		<h1>Welcome to Comic Scouts.</h1>
 		<p>Your top destination to find comics from your local comic shops. Comics are crowdsourced through our web app, you can manage and find more comics by downloading the app on your phone.</p>
-		<a class="button" href="#">Download the Web App</a>
+		<a class="button" href="https://comicscouts.glideapp.io/">Download the Web App</a>
 	</section>
 	
 	<h2>Recently Scouted</h2>
@@ -95,7 +95,7 @@ $('#hr').sheetrock({
 	  </script>
 	</ul>
 	
-	<p><a href="all.html">View All Comics ></a></p>
+	<p><a class="button" href="all.html">View All Comics ></a></p>
 	</div>
 
 <footer>
