--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ $('#hr').sheetrock({
 		<div class="logo-container">
 			<a class="logo" href="/"><img src="home-logo.png"></a>
 		</div>
-	  <a href="all.html">All Comics</a>
-	  <a href="about.html">About</a>
-	  <a href="contact.html">Contact</a>
+	  <a href="/all">All Comics</a>
+	  <a href="/about">About</a>
+	  <a href="/contact">Contact</a>
 	  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
 	    <i class="fa fa-bars"></i>
 	  </a>
@@ -98,7 +98,7 @@ $('#hr').sheetrock({
 	  </script>
 	</ul>
 	
-	<p><a class="button" href="all.html">View All Comics ></a></p>
+	<p style="text-align: center;"><a class="button" href="all.html">View All Comics ></a></p>
 	</div>
 
 <footer>
@@ -108,8 +108,6 @@ $('#hr').sheetrock({
 </footer>
 	
 <script src="js/main.js"></script> <!-- Resource jQuery -->
-
-
 
 </body>
 </html>
