--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 
 	<title>Comic Scouts | Home</title>
 
-	<link rel="stylesheet" href="css/reset.min.css"> <!-- CSS reset -->
+	<link rel="stylesheet" href="/css/reset.min.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
+	<link rel="stylesheet" href="/css/style.css"> <!-- Resource style -->
 	
 	
-	<script src="js/modernizr.js"></script> <!-- Modernizr -->
+	<script src="/js/modernizr.js"></script> <!-- Modernizr -->
 
   <!-- Load jQuery and Sheetrock from CDNJS -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -44,7 +44,7 @@ $('#hr').sheetrock({
 <div class="container">
 	<div class="topnav" id="myTopnav">
 		<div class="logo-container">
-			<a class="logo" href="/"><img src="home-logo.png"></a>
+			<a class="logo" href="/"><img src="/home-logo.png"></a>
 		</div>
 	  <a href="/all">All Comics</a>
 	  <a href="/about">About</a>
@@ -98,16 +98,16 @@ $('#hr').sheetrock({
 	  </script>
 	</ul>
 	
-	<p style="text-align: center;"><a class="button" href="all.html">View All Comics ></a></p>
+	<p style="text-align: center;"><a class="button" href="/all">View All Comics ></a></p>
 	</div>
 
 <footer>
 	<div class="container">
-		<p>Copyright &copy; 2019 Comic Scouts. All Rights Reserved. <a href="terms.html">Terms</a> | <a href="privacy-policy.html">Privacy Policy</a></p>
+		<p>Copyright &copy; 2019 Comic Scouts. All Rights Reserved. <a href="/terms">Terms</a> | <a href="/privacy-policy">Privacy Policy</a></p>
 	</div>
 </footer>
 	
-<script src="js/main.js"></script> <!-- Resource jQuery -->
+<script src="/js/main.js"></script> <!-- Resource jQuery -->
 
 </body>
 </html>
