--- a/contact/index.html
+++ b/contact/index.html
@@ -4,23 +4,37 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Comic Scouts - Contact</title>
+	<title>Comic Scouts | Contact</title>
 
-	<link rel="stylesheet" href="css/reset.min.css"> <!-- CSS reset -->
+	<link rel="stylesheet" href="/css/reset.min.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
+	<link rel="stylesheet" href="/css/style.css"> <!-- Resource style -->
 	
-</head>
-<body class="home">
 
-	<header>
-		Logo
-		
-		Menu
-	</header>
-	
-	<section class="content">
-		<h1>Contact Comic Scouts</h1>
+  <!-- Load jQuery and Sheetrock from CDNJS -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+
+</head>
+<body class="page-contact">
+
+<header>
+<div class="container">
+	<div class="topnav" id="myTopnav">
+		<div class="logo-container">
+			<a class="logo" href="/"><img src="/home-logo.png"></a>
+		</div>
+	  <a href="/all">All Comics</a>
+	  <a href="/about">About</a>
+	  <a class="active" href="/contact">Contact</a>
+	  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+	    <i class="fa fa-bars"></i>
+	  </a>
+	</div>
+</div>
+</header>
+	<div class="container">
+	<h1>Contact Comic Scouts</h1>
 		<form name="contact" method="POST" data-netlify="true">
   <p>
     <label>Your Name: <input type="text" name="name" /></label>   
@@ -34,14 +48,16 @@
   <p>
     <button type="submit">Send</button>
   </p>
-</form>	</section>
+</form>
+</div>
 
 <footer>
-	<div class="content">
-		<p>Copyright &copy; 2019 Comic Scouts. All Rights Reserved.</p>
+	<div class="container">
+		<p>Copyright &copy; 2019 Comic Scouts. All Rights Reserved. <a href="/terms">Terms</a> | <a href="/privacy-policy">Privacy Policy</a></p>
 	</div>
 </footer>
-
+	
+<script src="/js/main.js"></script> <!-- Resource jQuery -->
 
 </body>
 </html>
