--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
 			<a class="logo" href="/"><img src="/home-logo.png"></a>
 		</div>
 	  <a href="/all">All Comics</a>
-	  <a href="/about">About</a>
+	  <a class="active" href="/about">About</a>
 	  <a href="/contact">Contact</a>
 	  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
 	    <i class="fa fa-bars"></i>
