--- a/all/index.html
+++ b/all/index.html
@@ -45,7 +45,7 @@ $('#hr').sheetrock({
 		<div class="logo-container">
 			<a class="logo" href="/"><img src="/home-logo.png"></a>
 		</div>
-	  <a href="/all">All Comics</a>
+	  <a class="active" href="/all">All Comics</a>
 	  <a href="/about">About</a>
 	  <a href="/contact">Contact</a>
 	  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
