--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<title>Comic Scouts | Home</title>
 	
-	<link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
+	<link rel="shortcut icon" href="/favicon.ico">
 
 	<link rel="stylesheet" href="/css/reset.min.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
