--- a/all/index.html
+++ b/all/index.html
@@ -63,6 +63,8 @@ $('#hr').sheetrock({
 	</section>
 	
 	<hr>
+	<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
+	<hr>
 
 	<ul id="hr"></ul>
 	
