--- a/all/index.html
+++ b/all/index.html
@@ -63,7 +63,8 @@ $('#hr').sheetrock({
 	</section>
 	
 	<hr>
-	<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
+	<h3>Filter</h3>
+	<input style="width: 45%;" type="text" id="myInput" onkeyup="myFunction()" placeholder="Search by title or issue #.." title="Type in a name">
 	<hr>
 
 	<ul id="hr"></ul>
