--- a/all/index.html
+++ b/all/index.html
@@ -63,8 +63,8 @@ $('#hr').sheetrock({
 	</section>
 	
 	<hr>
-	<h3>Filter</h3>
-	<input style="width: 45%;" type="text" id="myInput" onkeyup="myFunction()" placeholder="Search by title or issue #.." title="Type in a name">
+	<h3>Filters</h3>
+	<input style="width: 100%;" type="text" id="myInput" onkeyup="myFunction()" placeholder="Search by title or issue #.." title="Type in a comic title or issue number">
 	<hr>
 
 	<ul id="hr"></ul>
