--- a/all/index.html
+++ b/all/index.html
@@ -64,7 +64,7 @@ $('#hr').sheetrock({
 	
 	<hr>
 	<h3>Filters</h3>
-	<input style="width: 96%;" type="text" id="myInput" onkeyup="myFunction()" placeholder="Search by title or issue #.." title="Type in a comic title or issue number">
+	<input style="width: 96%;" type="text" id="myInput" onkeyup="searchFunction()" placeholder="Search by title or issue #.." title="Type in a comic title or issue number">
 	<hr>
 
 	<ul id="hr"></ul>
