--- a/all/index.html
+++ b/all/index.html
@@ -21,6 +21,8 @@
 	
 	<!-- Load Handlebars.js from CloudFlare’s CDN. -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
+	
+	<script src="https://cdn.jsdelivr.net/npm/lazyload@2.0.0-rc.2/lazyload.js"></script>
 
 <script type="text/javascript">
 $(document).ready(function() {
@@ -73,7 +75,7 @@ $('#hr').sheetrock({
 	  <script id="hr-template" type="text/x-handlebars-template">
 	    <li class="comic">
 	    	<a href="#comic-display-{{cells.NID}}">
-	    		<img src="{{cells.Image}}"/>
+	    		<img class="lazyload" data-src="{{cells.Image}}" />
 	    		<h3 class="title">{{cells.Title}}</h3>
 	    		<p class="publisher">{{cells.Publisher}}</p>
 	    		<p class="issue">#{{cells.Issue}}</p>
@@ -83,7 +85,7 @@ $('#hr').sheetrock({
     		<div id="comic-display-{{cells.NID}}" class="overlay">
 					<div class="popup">
 						<a class="close" href="#"><p>Close <span>&times;</span></a>
-						<img src="{{cells.Image}}"/>
+						<img class="lazyload" data-src="{{cells.Image}}" />
 						<h2 class="title">{{cells.Title}}</h2>
 	    			<p class="publisher">{{cells.Publisher}}</p>
 	    			<p class="issue"><span class="label">Issue</span>#{{cells.Issue}}</p>
