--- a/all/index.html
+++ b/all/index.html
@@ -115,5 +115,12 @@ $('#hr').sheetrock({
 
 <script src="https://cdn.jsdelivr.net/npm/lazyload@2.0.0-rc.2/lazyload.js"></script>
 
+<script type="text/javascript" charset="utf-8">
+window.addEventListener("load", function(event) {
+    console.log("LOAD!");
+    lazyload();
+});
+</script>
+
 </body>
 </html>
