--- a/all/index.html
+++ b/all/index.html
@@ -97,6 +97,8 @@ $('#hr').sheetrock({
 	    			</p>
 	    			<hr>
 	    			<p class="timestamp"><span class="label">Date Scouted</span>{{cells.Timestamp}}</p>
+	    			<hr>
+	    			<p class="price"><span class="label">Ebay</span>{{cells.Ebay}}</p>
 					</div>
 				</div>
 	    </li>
