--- a/all/index.html
+++ b/all/index.html
@@ -98,7 +98,7 @@ $('#hr').sheetrock({
 	    			<hr>
 	    			<p class="timestamp"><span class="label">Date Scouted</span>{{cells.Timestamp}}</p>
 	    			<hr>
-	    			<p class="price"><span class="label">Ebay</span>{{cells.Ebay}}</p>
+	    			<p class="price"><span class="label">Ebay</span><a href="{{cells.Ebay}}">Ebay link</a></p>
 					</div>
 				</div>
 	    </li>
