--- a/all/index.html
+++ b/all/index.html
@@ -22,6 +22,8 @@
 	<!-- Load Handlebars.js from CloudFlare’s CDN. -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
 	
+	<script async src="https://epnt.ebay.com/static/epn-smart-tools.js"></script>
+	
 	
 
 <script type="text/javascript">
@@ -98,7 +100,7 @@ $('#hr').sheetrock({
 	    			<hr>
 	    			<p class="timestamp"><span class="label">Date Scouted</span>{{cells.Timestamp}}</p>
 	    			<hr>
-	    			<p class="price"><span class="label">Ebay</span><a href="{{cells.Ebay}}">Ebay link</a></p>
+	    			<p class="price"><ins class="epn-placement" data-config-id="5df7d9347e0d221e74cb5fd3"></ins></p>
 					</div>
 				</div>
 	    </li>
