--- a/all/index.html
+++ b/all/index.html
@@ -70,8 +70,6 @@ $('#hr').sheetrock({
 	<h3>Filters</h3>
 	<input style="width: 96%;" type="text" id="myInput" onkeyup="searchFunction()" placeholder="Search by title or issue #.." title="Type in a comic title or issue number">
 	<hr>
-	
-	<ins class="epn-placement" data-config-id="5df7d9347e0d221e74cb5fd3"></ins>
 
 	<ul id="hr"></ul>
 	
@@ -102,7 +100,7 @@ $('#hr').sheetrock({
 	    			<hr>
 	    			<p class="timestamp"><span class="label">Date Scouted</span>{{cells.Timestamp}}</p>
 	    			<hr>
-	    			<p class="price"><ins class="epn-placement" data-config-id="5df7d9347e0d221e74cb5fd3"></ins></p>
+	    			<p class="price">{{cells.Ebay}}</p>
 					</div>
 				</div>
 	    </li>
