--- a/all/index.html
+++ b/all/index.html
@@ -21,10 +21,6 @@
 	
 	<!-- Load Handlebars.js from CloudFlare’s CDN. -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
-	
-	<script async src="https://epnt.ebay.com/static/epn-smart-tools.js"></script>
-	
-	
 
 <script type="text/javascript">
 $(document).ready(function() {
@@ -100,7 +96,7 @@ $('#hr').sheetrock({
 	    			<hr>
 	    			<p class="timestamp"><span class="label">Date Scouted</span>{{cells.Timestamp}}</p>
 	    			<hr>
-	    			<p class="price">{{cells.Ebay}}</p>
+	    			<p class="price"><ins class="epn-placement" data-config-id="5df7d9347e0d221e74cb5fd3"></ins></p>
 					</div>
 				</div>
 	    </li>
@@ -125,6 +121,8 @@ window.addEventListener("load", function(event) {
     lazyload();
 });
 </script>
+
+<script async src="https://epnt.ebay.com/static/epn-smart-tools.js"></script>
 
 </body>
 </html>
