--- a/all/index.html
+++ b/all/index.html
@@ -96,7 +96,7 @@ $('#hr').sheetrock({
 	    			<hr>
 	    			<p class="timestamp"><span class="label">Date Scouted</span>{{cells.Timestamp}}</p>
 	    			<hr>
-	    			<p class="price"><ins class="epn-placement" data-config-id="5df7d9347e0d221e74cb5fd3"></ins></p>
+	    			<ins class="epn-placement" data-config-id="5df7d9347e0d221e74cb5fd3"></ins>
 					</div>
 				</div>
 	    </li>
