--- a/all/index.html
+++ b/all/index.html
@@ -83,7 +83,7 @@ $('#hr').sheetrock({
     		<div id="comic-display-{{cells.NID}}" class="overlay">
 					<div class="popup">
 						<a class="close" href="#"><p>Close <span>&times;</span></a>
-						<img class="lazyload" data-src="{{cells.Image}}" alt="Cover of {{cells.Publisher}}, {{cells.Title}} issue number {{cells.Issue}}" />
+						<img class="lazyload" data-src="{{cells.Image}}" src="/image/cover-laoding.png" alt="Cover of {{cells.Publisher}}, {{cells.Title}} issue number {{cells.Issue}}" />
 						<h2 class="title">{{cells.Title}}</h2>
 	    			<p class="publisher">{{cells.Publisher}}</p>
 	    			<p class="issue"><span class="label">Issue</span>#{{cells.Issue}}</p>
