--- a/all/index.html
+++ b/all/index.html
@@ -119,6 +119,13 @@ $(".lazy").lazy({
 
 <script src="https://cdn.jsdelivr.net/npm/lazyload@2.0.0-rc.2/lazyload.js"></script>
 
+<script type="text/javascript" charset="utf-8">
+window.addEventListener("load", function(event) {
+    console.log("LOAD!");
+    lazyload();
+});
+</script>
+
 <script async src="https://epnt.ebay.com/static/epn-smart-tools.js"></script>
 
 </body>
