--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ $('#hr').sheetrock({
 	  <script id="hr-template" type="text/x-handlebars-template">
 	    <li class="comic">
 	    	<a href="#comic-display-{{cells.NID}}">
-	    		<img src="{{cells.Image}}"/>
+	    		<img class="lazyload" src="{{cells.Image}}" alt="Cover of {{cells.Publisher}}, {{cells.Title}} issue number {{cells.Issue}}" />
 	    		<h3 class="title">{{cells.Title}}</h3>
 	    		<p class="publisher">{{cells.Publisher}}</p>
 	    		<p class="issue">#{{cells.Issue}}</p>
@@ -85,7 +85,7 @@ $('#hr').sheetrock({
     		<div id="comic-display-{{cells.NID}}" class="overlay">
 					<div class="popup">
 						<a class="close" href="#"><p>Close <span>&times;</span></a>
-						<img src="{{cells.Image}}"/>
+						<img class="lazyload" src="{{cells.Image}}" alt="Cover of {{cells.Publisher}}, {{cells.Title}} issue number {{cells.Issue}}" />
 						<h2 class="title">{{cells.Title}}</h2>
 	    			<p class="publisher">{{cells.Publisher}}</p>
 	    			<p class="issue"><span class="label">Issue</span>#{{cells.Issue}}</p>
