--- a/contact/index.html
+++ b/contact/index.html
@@ -37,7 +37,10 @@
 </header>
 	<div class="container">
 	<h1>Contact Comic Scouts</h1>
-		<form name="contact" method="POST" data-netlify="true">
+		<form name="contact" method="POST" netlify-honeypot="bot-field" data-netlify="true">
+  <p class="hidden">
+    <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
+  </p>
   <p>
     <label>Your Name: <input type="text" name="name" /></label>   
   </p>
