--- a/shops/index.html
+++ b/shops/index.html
@@ -25,7 +25,7 @@
 <script type="text/javascript">
 $(document).ready(function() {
   // Define spreadsheet URL.
-	var mySpreadsheet = 'https://docs.google.com/spreadsheets/d/1DrqBR528IhCltGXxA2xYsbYnpbN29QUcCokh5M_g3gk/edit#gid=0';
+	var mySpreadsheet = 'https://docs.google.com/spreadsheets/d/1DrqBR528IhCltGXxA2xYsbYnpbN29QUcCokh5M_g3gk/edit#gid=997082945';
 	
 	var HRTemplate = Handlebars.compile($('#hr-template').html());
 	
