--- a/shops/index.html
+++ b/shops/index.html
@@ -68,7 +68,7 @@ $(document).ready(function() {
 	    <li class="comic">
     		<h3 class="title">{{cells.Name}}</h3>
     		<p class="publisher">{{cells.Address}}</p>
-    		<p class="issue">{{cells.Website}}</p>
+    		<p class="issue"><a href="{{cells.Website}}">Visit Website</a></p>
 				</div>
 	    </li>
 	  </script>
