--- a/all/index.html
+++ b/all/index.html
@@ -46,6 +46,7 @@ $(document).ready(function() {
 			<a class="logo" href="/"><img src="/home-logo.png"></a>
 		</div>
 	  <a class="active" href="/all">All Comics</a>
+	  <a href="/shops">Shops</a>
 	  <a href="/about">About</a>
 	  <a href="/contact">Contact</a>
 	  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
