--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -27,6 +27,7 @@
 			<a class="logo" href="/"><img src="/home-logo.png"></a>
 		</div>
 	  <a href="/all">All Comics</a>
+	  <a href="/shops">Shops</a>
 	  <a href="/about">About</a>
 	  <a href="/contact">Contact</a>
 	  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
