--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -15,6 +15,15 @@
 
   <!-- Load jQuery and Sheetrock from CDNJS -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-127103553-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-127103553-1');
+</script>
 
 
 </head>
