--- a/shops/index.html
+++ b/shops/index.html
@@ -21,6 +21,15 @@
 	
 	<!-- Load Handlebars.js from CloudFlare’s CDN. -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
+	
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-127103553-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-127103553-1');
+</script>
 
 <script type="text/javascript">
 $(document).ready(function() {
